--- a/severityClassification/FINALLSEVERITYCLASSIFICATION.ipynb
+++ b/severityClassification/FINALLSEVERITYCLASSIFICATION.ipynb
@@ -355,7 +355,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/3l/xh28kn0j7_7d5hh7fgz188940000gn/T/ipykernel_5144/3125604880.py:15: SettingWithCopyWarning: \n",
+      "/var/folders/3l/xh28kn0j7_7d5hh7fgz188940000gn/T/ipykernel_1848/3125604880.py:15: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -549,31 +549,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "25b270aa",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Accuracy: 0.9967931587386424\n",
-      "Confusion Matrix:\n",
-      " [[3648    4]\n",
-      " [   8   82]]\n",
-      "Classification Report:\n",
-      "               precision    recall  f1-score   support\n",
-      "\n",
-      "           0       1.00      1.00      1.00      3652\n",
-      "           1       0.95      0.91      0.93        90\n",
-      "\n",
-      "    accuracy                           1.00      3742\n",
-      "   macro avg       0.98      0.96      0.97      3742\n",
-      "weighted avg       1.00      1.00      1.00      3742\n",
-      "\n",
-      "Precision: 0.9534883720930233\n",
-      "Recall: 0.9111111111111111\n",
-      "F1-score: 0.9318181818181819\n"
+     "ename": "NameError",
+     "evalue": "name 'X_res' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/3l/xh28kn0j7_7d5hh7fgz188940000gn/T/ipykernel_1848/2029892013.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mX_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mX_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_test\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtrain_test_split\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_res\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_res\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtest_size\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0.3\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrandom_state\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m42\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mmodel\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mXGBClassifier\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrandom_state\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m42\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_res\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_res\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'X_res' is not defined"
      ]
     }
    ],
@@ -605,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "d5aab9d0",
    "metadata": {},
    "outputs": [
@@ -816,7 +804,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/3l/xh28kn0j7_7d5hh7fgz188940000gn/T/ipykernel_5144/1634212357.py:15: SettingWithCopyWarning: \n",
+      "/var/folders/3l/xh28kn0j7_7d5hh7fgz188940000gn/T/ipykernel_1848/1634212357.py:15: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1196,7 +1184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "id": "364ce11b",
    "metadata": {},
    "outputs": [
@@ -1279,7 +1267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "id": "210b415f",
    "metadata": {},
    "outputs": [
@@ -1287,7 +1275,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/3l/xh28kn0j7_7d5hh7fgz188940000gn/T/ipykernel_5144/2234303642.py:15: SettingWithCopyWarning: \n",
+      "/var/folders/3l/xh28kn0j7_7d5hh7fgz188940000gn/T/ipykernel_1848/2234303642.py:15: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1316,7 +1304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
    "id": "c44e5a31",
    "metadata": {},
    "outputs": [
@@ -1328,7 +1316,7 @@
        "Name: Bed_days_category, dtype: int64"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1339,7 +1327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 20,
    "id": "6792f452",
    "metadata": {},
    "outputs": [
@@ -1368,7 +1356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 21,
    "id": "c5d084e6",
    "metadata": {},
    "outputs": [
@@ -1534,7 +1522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 22,
    "id": "0e09b073",
    "metadata": {},
    "outputs": [
@@ -1652,7 +1640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 23,
    "id": "754524fe",
    "metadata": {},
    "outputs": [
@@ -1735,7 +1723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 24,
    "id": "5d1f1088",
    "metadata": {},
    "outputs": [
@@ -1743,7 +1731,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/3l/xh28kn0j7_7d5hh7fgz188940000gn/T/ipykernel_5144/2612111887.py:15: SettingWithCopyWarning: \n",
+      "/var/folders/3l/xh28kn0j7_7d5hh7fgz188940000gn/T/ipykernel_1848/2612111887.py:15: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1772,7 +1760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 25,
    "id": "24a836e8",
    "metadata": {},
    "outputs": [
@@ -1784,7 +1772,7 @@
        "Name: Bed_days_category, dtype: int64"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1795,7 +1783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 26,
    "id": "d691af95",
    "metadata": {},
    "outputs": [
@@ -1824,7 +1812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 27,
    "id": "af008e31",
    "metadata": {},
    "outputs": [
@@ -1902,7 +1890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 28,
    "id": "ffa072d5",
    "metadata": {},
    "outputs": [
@@ -2020,7 +2008,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 3,
    "id": "ee6a59aa",
    "metadata": {},
    "outputs": [
@@ -2103,7 +2091,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 4,
    "id": "4a207645",
    "metadata": {},
    "outputs": [
@@ -2111,7 +2099,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/3l/xh28kn0j7_7d5hh7fgz188940000gn/T/ipykernel_5144/2043418622.py:15: SettingWithCopyWarning: \n",
+      "/var/folders/3l/xh28kn0j7_7d5hh7fgz188940000gn/T/ipykernel_1950/2043418622.py:15: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -2140,7 +2128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 5,
    "id": "9a1cfc36",
    "metadata": {},
    "outputs": [
@@ -2152,7 +2140,7 @@
        "Name: Bed_days_category, dtype: int64"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2163,7 +2151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 6,
    "id": "2f726197",
    "metadata": {},
    "outputs": [
@@ -2192,7 +2180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 7,
    "id": "fa9b3967",
    "metadata": {},
    "outputs": [
@@ -2270,7 +2258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 8,
    "id": "05bc7c69",
    "metadata": {},
    "outputs": [
@@ -2285,12 +2273,12 @@
     {
      "data": {
       "text/plain": [
-       "0    4004\n",
-       "1      95\n",
+       "0    5813\n",
+       "1     142\n",
        "Name: Bed_days_category, dtype: int64"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2298,13 +2286,13 @@
    "source": [
     "from imblearn.under_sampling import NeighbourhoodCleaningRule\n",
     "ncr = NeighbourhoodCleaningRule(n_neighbors=3)\n",
-    "X_res, y_res = ncr.fit_resample(X_train , y_train)\n",
+    "X_res, y_res = ncr.fit_resample(X , y)\n",
     "y_res.value_counts()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 9,
    "id": "06009c26",
    "metadata": {},
    "outputs": [
@@ -2312,23 +2300,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.975355969331873\n",
+      "Accuracy: 0.9863088718510405\n",
       "Confusion Matrix:\n",
-      " [[1759   20]\n",
-      " [  25   22]]\n",
+      " [[1768   11]\n",
+      " [  14   33]]\n",
       "Classification Report:\n",
       "               precision    recall  f1-score   support\n",
       "\n",
       "           0       0.99      0.99      0.99      1779\n",
-      "           1       0.52      0.47      0.49        47\n",
+      "           1       0.75      0.70      0.73        47\n",
       "\n",
-      "    accuracy                           0.98      1826\n",
-      "   macro avg       0.75      0.73      0.74      1826\n",
-      "weighted avg       0.97      0.98      0.97      1826\n",
+      "    accuracy                           0.99      1826\n",
+      "   macro avg       0.87      0.85      0.86      1826\n",
+      "weighted avg       0.99      0.99      0.99      1826\n",
       "\n",
-      "Precision: 0.5238095238095238\n",
-      "Recall: 0.46808510638297873\n",
-      "F1-score: 0.49438202247191015\n"
+      "Precision: 0.75\n",
+      "Recall: 0.7021276595744681\n",
+      "F1-score: 0.7252747252747254\n"
      ]
     }
    ],
@@ -2337,7 +2325,7 @@
     "\n",
     "model = XGBClassifier(random_state=42)\n",
     "\n",
-    "model.fit(X_train, y_train)\n",
+    "model.fit(X_res, y_res)\n",
     "\n",
     "\n",
     "# ارزیابی مدل\n",
@@ -2360,7 +2348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 10,
    "id": "62f9b334",
    "metadata": {},
    "outputs": [
@@ -2368,13 +2356,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "بهترین آستانه با توجه به F1 Score: 0.42424242424242425\n",
-      "مقدار F1 Score بهترین آستانه: 0.5\n"
+      "بهترین آستانه با توجه به F1 Score: 0.393939393939394\n",
+      "مقدار F1 Score بهترین آستانه: 0.7920792079207921\n"
      ]
     }
    ],
    "source": [
-    "y_pred_proba_svm = xgb_model.predict_proba(X_test)\n",
+    "y_pred_proba_svm = model.predict_proba(X_test)\n",
     "\n",
     "thresholds = np.linspace(0, 1, 100)\n",
     "f1_scores = []\n",
@@ -2392,7 +2380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 13,
    "id": "03d758b3",
    "metadata": {},
    "outputs": [
@@ -2400,30 +2388,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.9748083242059146\n",
+      "Accuracy: 0.988499452354874\n",
       "Confusion Matrix:\n",
-      " [[1757   22]\n",
-      " [  24   23]]\n",
+      " [[1765   14]\n",
+      " [   7   40]]\n",
       "Classification Report:\n",
       "               precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.99      0.99      0.99      1779\n",
-      "           1       0.51      0.49      0.50        47\n",
+      "           0       1.00      0.99      0.99      1779\n",
+      "           1       0.74      0.85      0.79        47\n",
       "\n",
-      "    accuracy                           0.97      1826\n",
-      "   macro avg       0.75      0.74      0.74      1826\n",
-      "weighted avg       0.97      0.97      0.97      1826\n",
+      "    accuracy                           0.99      1826\n",
+      "   macro avg       0.87      0.92      0.89      1826\n",
+      "weighted avg       0.99      0.99      0.99      1826\n",
       "\n",
-      "Precision: 0.5111111111111111\n",
-      "Recall: 0.48936170212765956\n",
-      "F1-score: 0.5\n"
+      "Precision: 0.7407407407407407\n",
+      "Recall: 0.851063829787234\n",
+      "F1-score: 0.7920792079207921\n"
      ]
     }
    ],
    "source": [
-    "threshold = 0.42\n",
+    "threshold =0.393939393939394\n",
     "\n",
-    "probabilities = xgb_model.predict_proba(X_test)\n",
+    "probabilities = model.predict_proba(X_test)\n",
     "\n",
     "thresholded_predictions = (probabilities[:, 1] >= threshold).astype(int)\n",
     "\n",
@@ -2466,56 +2454,6 @@
     "shap_values = explainer.shap_values(X_train)\n",
     "\n",
     "shap.summary_plot(shap_values, X_test, plot_type=\"bar\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "34c013db",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
-    "\n",
-    "# مقادیر MSE، MAE و R² برای هر پنج مدل\n",
-    "Accuracy = [3.62, 2.36, 3.37, 3.6, 2.76]\n",
-    "Precision = [2.26, 1.57, 2.06, 2.13, 1.65]\n",
-    "Recall = [0.85, 0.52, 0.85,0.59,  0.64]\n",
-    "F1 Score = [0.80, 0.35, 0.98,0.12,  0.9]\n",
-    "\n",
-    "labels = ['Car Driver', 'Car Passenger', 'Motor Cycle', 'Pedal Cycle', 'Pedestrian']\n",
-    "\n",
-    "data = np.array([Accuracy, Precision, Recall,F1 Score])\n",
-    "\n",
-    "num_vars = data.shape[1]\n",
-    "\n",
-    "angles = np.linspace(0, 2 * np.pi, num_vars, endpoint=False).tolist()\n",
-    "angles += angles[:1]  # بستن دایره\n",
-    "\n",
-    "fig, ax = plt.subplots(figsize=(8, 8), subplot_kw=dict(polar=True))\n",
-    "\n",
-    "# رنگ‌ها برای هر معیار\n",
-    "colors = ['red', 'green', 'blue','yellow']\n",
-    "labels_metric = ['RMSE', 'MAE', 'R²','hh']\n",
-    "\n",
-    "for idx, (data_slice, color, label) in enumerate(zip(data, colors, labels_metric)):\n",
-    "    if label == 'MAE':\n",
-    "        alpha_value = 0.5  \n",
-    "    else:\n",
-    "        alpha_value = 0.25 \n",
-    "    data_slice = np.concatenate([data_slice, [data_slice[0]]])  \n",
-    "    ax.plot(angles, data_slice, 'o-', linewidth=2, label=label, color=color)\n",
-    "    ax.fill(angles, data_slice, alpha=alpha_value, color=color)\n",
-    "\n",
-    "ax.set_xticks(angles[:-1]) \n",
-    "ax.set_xticklabels(labels)\n",
-    "ax.set_yticks([1, 2, 3, 4, 5]) \n",
-    "ax.set_yticklabels(['1', '2', '3', '4', '5'])\n",
-    "\n",
-    "plt.title('XGBoost Model Performance Comparison', size=15, color='black', y=1.1)\n",
-    "plt.legend(title='Metric', loc='upper right', bbox_to_anchor=(0.1, 0.1))\n",
-    "plt.show()\n"
    ]
   },
   {
